helm-chart/mlflow/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-11.10.26
  name: mlflow-minio-lb
  namespace: mlflow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: minio-api
    port: 9000
    protocol: TCP
    targetPort: minio-api
  - name: minio-console
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector:
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/name: minio
  sessionAffinity: None
  type: LoadBalancer
