helm-chart/mlflow/mlflow-rendered.yaml
---
# Source: mlflow/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    helm.sh/chart: mlflow-1.2.1
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: mlflow
      protocol: TCP
      name: mlflow
  selector:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
---
# Source: mlflow/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    helm.sh/chart: mlflow-1.2.1
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlflow
      app.kubernetes.io/instance: mlflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlflow
        app.kubernetes.io/instance: mlflow
    spec:
      serviceAccountName: mlflow
      securityContext:
        {}
      containers:
        - name: mlflow
          securityContext:
            {}
          image: "ghcr.io/slaclab/mlflow-latest/custom-mlflow:0.9"
          imagePullPolicy: Always
          command: ["mlflow"]
          args: ["server",
                 "--backend-store-uri", "postgresql://app:password@mlflow-test-cluster-psql-rw:5432/mlflow",
                 "--artifacts-destination", "s3://mlflow",
                 "--serve-artifacts",
                 "--host", "0.0.0.0",
                 "--port", "5000"]
          ports:
            - name: mlflow
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 45
            periodSeconds: 60
            httpGet:
              path: /
              port: mlflow
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /
              port: mlflow
---
# Source: mlflow/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "mlflow-test-connection"
  labels:
    helm.sh/chart: mlflow-1.2.1
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['mlflow:5000']
  restartPolicy: Never
